@@ -1,3 +1,4 @@
+* Read employee according to the context
 * Add timezone on company to compute today
 
 Version 3.0.0 - 2013-10-21
